test/runnable/incdec.nt
module incdec;

macro import std.macro.assert;

struct S { int a; }

void main() {
    mut S s;
    s.a++;
    s.a--;
    ++s.a;
    --s.a;
    assert(s.a == 0);
}
