test/fail_compilation/struct_method_address.nt
module struct_method_address;

struct S {
    void foo() { }
}

void main() {
    mut S s;
    auto dg = &s.foo;
}
